# Rust-Twitter-Trending

./: .gitignore  Cargo.toml  README.md  out.txt
data/: DATA_LICENCE.md  get_data.md
my-out/: experiment_output.txt  experiment_stdout.txt  top_words_hashtags.txt
my-out/results/: rust_non-parallelised_map-reduce.csv  rust_parallelised_map-reduce.csv
my-out/stats/basic_values/: processing_speed_rust_non-parallelised_map-reduce.csv  processing_speed_rust_parallelised_map-reduce.csv  time_taken_rust_non-parallelised_map-reduce.csv  time_taken_rust_parallelised_map-reduce.csv
my-out/stats/t_tests/: processing_speed.csv  time_taken.csv
src/: get_data.rs  get_tweets.rs  main.rs  make_data_files.py  process_results.rs  process_tweets.rs  processed_tweets_output.rs
src/get_data/: download_dataset.rs  mod.rs  verbose_file_download.rs
src/get_data/download_dataset/: mod.rs  verbose_file_download.rs
src/process_results/: make_stats.rs  make_visualisations.rs  mod.rs  write_results.rs
src/process_results/make_stats/: basic_values.rs  mod.rs  t_tests.rs  wilcoxon_rank_sum.rs
src/process_results/make_visualisations/: bar_charts.rs  box_plots.rs  dot_plots.rs  mod.rs  scatter_plots.rs
