[package]
name = "rust-twitter-trending"
version = "0.1.0"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.1.1"
rayon = "1.5.1"
dashmap = { version = "4.0.2", features = ["rayon"] }
polars = "0.14.7"
reqwest = "0.11.4"
html_parser = "0.6.2"
tokio = { version = "1.9.0", features = ["full"] }