[package]
name = "rust-twitter-trending"
version = "0.1.0"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
polars = "0.14.7"
reqwest = { version = "0.11.4", features = ["blocking"] }
md5 = "0.7.0"
serde = { version = "1.0.127", features = ["derive"] }
charts = "0.3.0"
statrs = "0.15.0"
const_format = "0.2.15"
plotters = "^0.3.1"
mathru = "0.10.0"